--- a/deployment/conf/service_secret_policy.yaml
+++ b/deployment/conf/service_secret_policy.yaml
@@ -2,43 +2,103 @@ apiVersion: v1
 kind: SecretPolicy
 secrets:
 - spec:
-    name: secret1-rsa-keypair
-    # Default secret type is SECRET_TYPE_RSA_KEY_PAIR
-    type: SECRET_TYPE_RSA_KEY_PAIR
-    service: service1
-    policy:
-      enclaveMatchAnyRules:
-      - mrenclave: ""
-        # Default signing private key in Intel SDK sample code
-        mrsigner: 83D719E77DEACA1470F6BAF62A4D774303C899DB69020F9C70EE1DFC08C7CE9E
-        prodID: "0"
-        minIsvSvn: "0"
-        user_data: ""
-        spid: ""
-  data: ~
-- spec:
-    name: secret2-aes-key
-    type: SECRET_TYPE_AES256_KEY
-    service: service1
-    policy:
-      enclaveMatchAnyRules:
-      - mrenclave: ""
-        mrsigner: 83D719E77DEACA1470F6BAF62A4D774303C899DB69020F9C70EE1DFC08C7CE9E
-        prodID: "0"
-        minIsvSvn: "0"
-        user_data: ""
-        spid: ""
-  data: ~
-- spec:
-    name: secret3-my-password
+    name: secret-my-password
     type: SECRET_TYPE_IMPORT_DATA
     service: service1
+    readonly: "true"
+    share: "public"
     policy:
       enclaveMatchAnyRules:
       - mrenclave: ""
         mrsigner: 83D719E77DEACA1470F6BAF62A4D774303C899DB69020F9C70EE1DFC08C7CE9E
-        prodID: "0"
+        prodID: ""
         minIsvSvn: "0"
         user_data: ""
         spid: ""
+        debug_disabled: ""
   data: password-test
+- spec:
+    name: secret-my-aes256-key
+    type: SECRET_TYPE_AES256_KEY
+    service: service1
+    readonly: "false"
+    share: "private"
+    policy:
+      enclaveMatchAnyRules:
+      - mrenclave: ""
+        mrsigner: 83D719E77DEACA1470F6BAF62A4D774303C899DB69020F9C70EE1DFC08C7CE9E
+        prodID: ""
+        minIsvSvn: "0"
+        user_data: ""
+        spid: ""
+        debug_disabled: ""
+- spec:
+    name: secret-my-keypair
+    type: SECRET_TYPE_RSA_KEY_PAIR
+    service: service1
+    readonly: "true"
+    share: "public"
+    policy:
+      enclaveMatchAnyRules:
+      - mrenclave: ""
+        mrsigner: 83D719E77DEACA1470F6BAF62A4D774303C899DB69020F9C70EE1DFC08C7CE9E
+        prodID: ""
+        minIsvSvn: "0"
+        user_data: ""
+        spid: ""
+        debug_disabled: ""
+    params:
+    - key: "pkcs_type"
+      value: "pkcs8"
+    - key: "bit_length"
+      value: 2048
+- spec:
+    name: secret-my-certificate
+    type: SECRET_TYPE_CERTIFICATE
+    service: service1
+    readonly: "true"
+    share: "public"
+    policy:
+      enclaveMatchAnyRules:
+      - mrenclave: ""
+        mrsigner: 83D719E77DEACA1470F6BAF62A4D774303C899DB69020F9C70EE1DFC08C7CE9E
+        prodID: ""
+        minIsvSvn: "0"
+        user_data: ""
+        spid: ""
+        debug_disabled: ""
+- spec:
+    name: secret-my-sm2-keypair
+    type: SECRET_TYPE_SM2_KEY_PAIR
+    service: service1
+    readonly: "true"
+    share: "public"
+    policy:
+      enclaveMatchAnyRules:
+      - mrenclave: ""
+        mrsigner: 83D719E77DEACA1470F6BAF62A4D774303C899DB69020F9C70EE1DFC08C7CE9E
+        prodID: ""
+        minIsvSvn: "0"
+        user_data: ""
+        spid: ""
+        debug_disabled: ""
+- spec:
+    name: secret-my-configuration
+    type: SECRET_TYPE_CONFIGURATIONS
+    service: service1
+    readonly: "true"
+    share: "public"
+    policy:
+      enclaveMatchAnyRules:
+      - mrenclave: ""
+        mrsigner: 83D719E77DEACA1470F6BAF62A4D774303C899DB69020F9C70EE1DFC08C7CE9E
+        prodID: ""
+        minIsvSvn: "0"
+        user_data: ""
+        spid: ""
+        debug_disabled: ""
+    params:
+    - key: "id"
+      value: "12345678"
+    - key: "nonce"
+      value: "1234567890abcdef"
