--- a/deployment/dockerfile/Dockerfile
+++ b/deployment/dockerfile/Dockerfile
@@ -1,4 +1,4 @@
-FROM antkubetee/kubetee-dev-ubuntu18.04-grpc-sgx-ssl:2.0
+FROM antkubetee/kubetee-dev-sgx:2.0-ubuntu20.04-sgx2.17.1
 
 LABEL maintainer="Junxian Xiao <junxian.xjx@antfin.com>"
 
@@ -6,9 +6,9 @@ ARG HOMEDIR=/root
 
 USER root
 COPY ./buildout/* ${HOMEDIR}/
-COPY ./bin/*.sh /usr/bin/
-COPY ./conf/* /etc/kubetee/
-COPY ./certs/* /etc/certs/
+COPY ./aecs_instance/bin/*.sh /usr/bin/
+COPY ./aecs_instance/etc/kubetee/* /etc/kubetee/
+COPY ./aecs_instance/etc/certs/* /etc/certs/
 
 USER root
 WORKDIR ${HOMEDIR}
