--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,19 +1,11 @@
-set(SGXSSL_LIB /opt/intel/sgxssl/lib64)
-set(SGXSSL_INC /opt/intel/sgxssl/include)
-
 # Generate the protobuf and grpc source and header files
 find_package(Protobuf REQUIRED)
 find_package(GRPC REQUIRED)
 set(AECS_PROTO_FILES
-    ${TEE_TOP_DIR}/proto/kubetee.proto
+    ${UAL_TOP_DIR}/proto/attestation.proto
+    ${UAL_TOP_DIR}/proto/crypto.proto
     ${AECS_TOP_DIR}/proto/aecs.proto
     ${AECS_TOP_DIR}/proto/aecs_service.proto
-)
-PROTOBUF_GENERATE_CPP(
-    AECS_PROTO_SRCS
-    AECS_PROTO_HDRS
-    ${CMAKE_BINARY_DIR}
-    ${AECS_PROTO_FILES}
 )
 GRPC_GENERATE_CPP(
     AECS_GRPC_SRCS
@@ -23,35 +15,26 @@ GRPC_GENERATE_CPP(
 )
 
 # Generate the trusted targets
-set(AECS_LDS ${CMAKE_CURRENT_SOURCE_DIR}/enclave/enclave.lds)
-set(AECS_KEY ${CMAKE_CURRENT_SOURCE_DIR}/enclave/enclave_private.pem)
+set(AECS_LDS ${ENCLAVE_LDS})
+set(AECS_KEY ${ENCLAVE_KEY})
 set(AECS_EDL ${CMAKE_CURRENT_SOURCE_DIR}/enclave/enclave.edl)
-if(SGX_MODE STREQUAL "Release")
-    set(AECS_XML ${AECS_TOP_DIR}/deployment/conf/enclave.config.release.xml)
-else()
-    set(AECS_XML ${CMAKE_CURRENT_SOURCE_DIR}/enclave/enclave.config.xml)
-endif()
+set(AECS_XML ${ENCLAVE_XML})
 set(EX_EDL_SEARCH_PATHS
     ${CMAKE_CURRENT_SOURCE_DIR}/enclave
-    ${TEE_TOP_DIR}/sdk/edl
-    ${TEE_TOP_DIR}/sdk/include
-    ${SGXSSL_INC}
+    ${ENCLAVE_EDL_SEARCH_PATHS_UA}
 )
 
 file(GLOB AECS_TRUSTED_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/trusted/*.cpp)
-set(AECS_TLIBS tkubetee tprotobuf)
+set(AECS_TLIBS aecs_tprotobuf ${UAL_T_LIBS_NAME})
 set(AECS_TSRCS
     ${AECS_TRUSTED_SRCS}
-    ${CMAKE_BINARY_DIR}/kubetee.pb.cc
-    ${CMAKE_BINARY_DIR}/aecs.pb.cc
 )
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_BINARY_DIR}
     ${CMAKE_BINARY_DIR}
-    ${TEE_TOP_DIR}/sdk
-    ${TEE_TOP_DIR}/sdk/include
-    ${TEE_TOP_DIR}/third_party/protobuf-cpp/src/
+    ${AECS_TOP_DIR}/include
+    ${UAL_TOP_DIR}/include
 )
 
 set(AECSENCLAVE aecs_enclave)
@@ -65,7 +48,7 @@ add_enclave_library(
 )
 target_include_directories(
     ${AECSENCLAVE} PRIVATE
-    ${SGXSSL_INC}
+    ${SGXSSL_INCLUDE_DIR}
 )
 enclave_sign(
     ${AECSENCLAVE}
@@ -74,16 +57,19 @@ enclave_sign(
 )
 
 # Generate the untrusted targets
-file(GLOB AECS_CPPSRCS ${CMAKE_CURRENT_SOURCE_DIR}/untrusted/*.cpp)
-set(AECS_USRCS ${AECS_CPPSRCS} ${AECS_PROTO_SRCS} ${AECS_GRPC_SRCS})
+file(GLOB AECS_COMMON_UNTRUSTED_SRCS ${AECS_TOP_DIR}/common/untrusted/*.cpp)
+file(GLOB AECS_UNTRUSTED_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/untrusted/*.cpp)
+set(AECS_USRCS
+    ${AECS_COMMON_UNTRUSTED_SRCS}
+    ${AECS_UNTRUSTED_SRCS}
+    ${AECS_GRPC_SRCS})
 include_directories(
     ${CMAKE_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_BINARY_DIR}
     ${CMAKE_BINARY_DIR}
-    ${TEE_TOP_DIR}/sdk
-    ${TEE_TOP_DIR}/sdk/include
-    ${TEE_TOP_DIR}/third_party/rapidjson/include
+    ${AECS_TOP_DIR}/include
+    ${UAL_TOP_DIR}/include
 )
 set(AECSAPP aecs_server)
 add_untrusted_executable(
@@ -94,12 +80,9 @@ add_untrusted_executable(
 )
 target_link_libraries(
     ${AECSAPP}
-    -L${LIBRARY_OUTPUT_PATH} -L${SGX_LIBRARY_DIR} -L${SGXSSL_LIB}
-    -L/usr/lib64 -L/usr/local/lib64
     -lprotobuf
     gRPC::grpc++_reflection
-    -Wl,--start-group -lukubetee -lchallenger -lsgx_usgxssl -lcrypto -Wl,--end-group
+    -Wl,--start-group -laecs_uprotobuf -lua_ugrpc ${UAL_LIBS_LINK} -Wl,--end-group
     -Wl,-rpath=.:/lib64:/usr/lib:/usr/local/lib:/usr/local/lib64:${SGX_LIBRARY_DIR}
 )
-add_dependencies(${AECSAPP} ukubetee challenger)
-
+add_dependencies(${AECSAPP} aecs_uprotobuf ua_ugrpc ${UAL_LIBS_NAME})
