--- a/deployment/conf/service_secret_policy.yaml
+++ b/deployment/conf/service_secret_policy.yaml
@@ -10,7 +10,7 @@ secrets:
     policy:
       enclaveMatchAnyRules:
       - mrenclave: ""
-        mrsigner: 83D719E77DEACA1470F6BAF62A4D774303C899DB69020F9C70EE1DFC08C7CE9E
+        mrsigner: "" 
         prodID: ""
         minIsvSvn: "0"
         user_data: ""
@@ -26,7 +26,7 @@ secrets:
     policy:
       enclaveMatchAnyRules:
       - mrenclave: ""
-        mrsigner: 83D719E77DEACA1470F6BAF62A4D774303C899DB69020F9C70EE1DFC08C7CE9E
+        mrsigner: ""
         prodID: ""
         minIsvSvn: "0"
         user_data: ""
@@ -41,7 +41,7 @@ secrets:
     policy:
       enclaveMatchAnyRules:
       - mrenclave: ""
-        mrsigner: 83D719E77DEACA1470F6BAF62A4D774303C899DB69020F9C70EE1DFC08C7CE9E
+        mrsigner: ""
         prodID: ""
         minIsvSvn: "0"
         user_data: ""
@@ -61,7 +61,7 @@ secrets:
     policy:
       enclaveMatchAnyRules:
       - mrenclave: ""
-        mrsigner: 83D719E77DEACA1470F6BAF62A4D774303C899DB69020F9C70EE1DFC08C7CE9E
+        mrsigner: ""
         prodID: ""
         minIsvSvn: "0"
         user_data: ""
@@ -76,7 +76,7 @@ secrets:
     policy:
       enclaveMatchAnyRules:
       - mrenclave: ""
-        mrsigner: 83D719E77DEACA1470F6BAF62A4D774303C899DB69020F9C70EE1DFC08C7CE9E
+        mrsigner: ""
         prodID: ""
         minIsvSvn: "0"
         user_data: ""
@@ -91,7 +91,7 @@ secrets:
     policy:
       enclaveMatchAnyRules:
       - mrenclave: ""
-        mrsigner: 83D719E77DEACA1470F6BAF62A4D774303C899DB69020F9C70EE1DFC08C7CE9E
+        mrsigner: ""
         prodID: ""
         minIsvSvn: "0"
         user_data: ""
