--- a/client/cpp_occlum/bom_aecs_client_gnu.yaml
+++ b/client/cpp_occlum/bom_aecs_client_gnu.yaml
@@ -20,3 +20,6 @@ targets:
       - from: ../../../third_party/unified_attestation/deployment/conf/
         files:
           - unified_attestation.json
+      - from: ../../../deployment/conf/
+        files:
+          - service_secret_policy.yaml
