--- a/client/cpp_occlum/bom_aecs_client_gnu.yaml
+++ b/client/cpp_occlum/bom_aecs_client_gnu.yaml
@@ -23,3 +23,4 @@ targets:
       - from: ../../../deployment/conf/
         files:
           - service_secret_policy.yaml
+          - ta_secret_policy.yaml
