--- a/client/cpp_occlum/bom_aecs_client_gnu.yaml
+++ b/client/cpp_occlum/bom_aecs_client_gnu.yaml
@@ -6,7 +6,7 @@ targets:
     copy:
       - from: ../build/out
         files:
-          - name: aecs_client_get_secret
+          - name: aecs_client_cli
   - target: /opt/occlum/glibc/lib/
     copy:
       - files:
